finally plugins work